# coinjoin.nl

./: .gitattributes  .gitignore  LICENSE  README.md  coinjoin-stats.py  index.html  txflow.py  viewer-mods.md
kruxd/: README.md  kruxd.py
nginx/: coinjoin.nl.conf  mempool.conf
passport/: PASSPORT_TESTING.md
passport/coinjoin-signer/: .gitignore  Cargo.toml  LICENSE.md  README.md  app-config.toml  build.rs  permission_templates.toml
passport/coinjoin-signer/.cargo/: config.toml
passport/coinjoin-signer/i18n/: en.json  es.json
passport/coinjoin-signer/resources/: fonts  icons  images
passport/coinjoin-signer/src/: coinjoin.rs  main.rs  theme.rs
passport/coinjoin-signer/theme/: theme.json
passport/coinjoin-signer/ui/: _preview.slint  app.slint  cj.slint  cjbutton.slint  cjstepper.slint  ui
passport/coinjoin-signer/ui/pages/: page.slint  props.slint
passport/coinjoin-signer/ui/pages/authorize/: page.slint  props.slint
passport/coinjoin-signer/ui/pages/complete/: page.slint  props.slint
passport/coinjoin-signer/ui/pages/session/: page.slint  props.slint
pytrezord/: README.md  pytrezord.py  test_pytrezord.py
scripts/: README.md  coinjoin-history-backfill.py  coinjoin-history-wait.sh  coinjoin-latest-txid.sh  fee-bump.py  sabi.py  txflow.py
systemd/: wasabi-coinjoin-latest.service  wasabi-coinjoin-latest.timer
web/: index.html
